--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     else document.addEventListener('DOMContentLoaded', init, false);
 </script>
 <audio autoplay="autoplay" loop="loop" preload="auto" id="music" controls>
-    <source src="img/魏潇逸,小坠%20-%20寄东风.mp3" type="audio/ogg">
-    <source src="img/魏潇逸,小坠%20-%20寄东风.mp3" type="audio/mpeg">
+    <source src="img/520.mp3" type="audio/ogg">
+    <source src="img/520.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
